--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -252,7 +252,7 @@ Hero
 ========================================================================== */
 .hero {
   min-height: 750px;
-  background: url('../img/hero-min.jpg') center center;
+  background: url('../img-mine/hero-min.jpg') center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -278,22 +278,23 @@ Hero
     margin-bottom: 80px;
   }
   .hero-content {
-    padding-top: 40%;
+    padding-top: 55%;
   }
   .hero-content img {
     width: 55%;
-    margin-bottom: 12%;
+    margin-bottom: 2%;
   }
 }
 .navigation {
   transition: all 300ms ease-in-out;
+  background-color: #324522;
   position: fixed;
   width: 100%;
   z-index: 999;
 }
 .fixed {
   position: fixed;
-  background-color: rgba(55, 36, 40, .88);
+  background-color: #324522;
   z-index: 999;
   width: 100%;
 }
@@ -318,7 +319,7 @@ header {
     display: inline-block;
   }
   .logo img {
-    height: 19px;
+    height: 28px;
   }
   ul.primary-nav {
     margin: 0 0 0 75px;
