Moved images, other changes

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -252,7 +252,7 @@ Hero
 ========================================================================== */
 .hero {
   min-height: 1000px;
-  background: url('../img-mine/hero-min.jpg') center 45%;
+  background: url('../img/hero-min.jpg') center 45%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
