Add Amazon Link

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -750,6 +750,10 @@ Embed video
 /* ==========================================================================
 Google map
 ========================================================================== */
+#map {
+  height: 750px;
+}
+
 #map-canvas {
   height: 500px;
   width: 100%;
